# cpp-serialization

./: CMakeLists.txt
include/: array.hpp  context.hpp  meta.hpp  primitive.hpp  root.hpp  serialization.hpp
src/: array.cpp  context.cpp  main.cpp  primitive.cpp
test/: main.cpp
